syntax = "proto3";

import "credentials.proto";
import "nothing.proto";

package p4sec;

message controller {
	string      name = 1;
	string      address = 2;
	credentials credentials = 3;
	bool        is_client = 4;
}

message local_controller {
	controller      controller = 1;
	string          mac = 2;
	bool            concentrator = 3;
	bytes           ip = 4;
}

message registration {
	string id = 1;
	bytes key = 2;
}

service Registration {
	rpc register(controller) returns (registration);
	rpc register_local_controller(local_controller) returns (registration);
	rpc unregister(registration) returns (nothing);
}

